添加未读消息时间

--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#5AB4AA",
-    "navigationBarTitleText": "铭邦高考志愿网",
+    "navigationBarTitleText": "铭邦高考规划平台",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
