修改买卡功能

--- a/app.json
+++ b/app.json
@@ -51,7 +51,8 @@
     "pages/table/table",
     "pages/video/video",
     "pages/teacher/teacher",
-    "pages/person/improve/improve"
+    "pages/person/improve/improve",
+    "pages/person/improve/content/content"
   ],
   "window": {
     "backgroundTextStyle": "light",
