增加视频页面

--- a/app.json
+++ b/app.json
@@ -53,7 +53,9 @@
     "pages/teacher/teacher",
     "pages/person/improve/improve",
     "pages/person/improve/content/content",
-    "pages/video/play/play"
+    "pages/video/play/play",
+    "pages/school/schoolcontent/rule/rule",
+    "pages/school/schoolcontent/plan/plan"
   ],
   "window": {
     "backgroundTextStyle": "light",
