--- a/app.json
+++ b/app.json
@@ -65,7 +65,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#5AB4AA",
-    "navigationBarTitleText": "铭邦高考规划平台",
+    "navigationBarTitleText": "铭邦高考志愿平台",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
