gd_添加忘记密码功能

--- a/app.json
+++ b/app.json
@@ -1,18 +1,22 @@
 {
   "pages": [
-		"pages/index/index",
+    "pages/index/index",
+    "pages/person/person",
+    "pages/character/character",
+    "pages/school/school",
+    "pages/consult/consult",
+		"pages/imitate/imitate",
+    "pages/imitate/school/school",
+    "pages/forgetPassword/forgetPassword",
 		"pages/video/video",
 		"pages/video/play/play",
 		"pages/teacher/teacher",
-		"pages/imitate/imitate",
 		"pages/person/collect/collect",
 		"pages/person/collect/lists/lists",
 		"pages/intelligence/intelligence",
-		"pages/person/person",
 		"pages/login/login",
     "pages/register/register",
     "pages/intelligence/result/result",
-    "pages/consult/consult",
     "pages/consult/consultlist/consultlist",
     "pages/contacts/contacts",
     "pages/notice/notice",
@@ -24,7 +28,6 @@
     "pages/person/goods/goods",
     "pages/person/security/security",
     "pages/notice/noticecontent/noticecontent",
-    "pages/school/school",
     "pages/person/security/loginpw/loginpw",
     "pages/person/security/paymentpw/paymentpw",
     "pages/person/security/phone/phone",
@@ -45,12 +48,10 @@
     "pages/intelligence/major/major",
     "pages/person/tbasics/tbasics",
     "pages/person/information/content/content",
-    "pages/imitate/school/school",
     "pages/imitate/school/content/content",
     "pages/person/goods/payment/payment",
     "pages/imitate/school/major/major",
     "pages/person/member/member",
-    "pages/character/character",
     "pages/character/test/test",
     "pages/table/table",
     "pages/person/improve/improve",
@@ -87,7 +88,7 @@
       },
       {
         "pagePath": "pages/person/person",
-        "text": "我的",
+        "text": "个人中心",
         "iconPath": "images/6.png",
         "selectedIconPath": "images/5.png"
       }
