gd_新页面自主招生，高职单招

--- a/app.json
+++ b/app.json
@@ -15,6 +15,8 @@
 		"pages/person/collect/lists/lists",
 		"pages/intelligence/intelligence",
 		"pages/login/login",
+    "pages/autonomousEnrollment/autonomousEnrollment",
+    "pages/singleRecruit/singleRecruit",
     "pages/register/register",
     "pages/intelligence/result/result",
     "pages/consult/consultlist/consultlist",
